<?xml version="1.0" encoding="utf-8"?>
<com.crackncrunch.amplain.ui.screens.auth.AuthView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="@dimen/login_logo_width_100"
        android:layout_height="@dimen/login_logo_height_100"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_bigger_plus_48"
        android:src="@drawable/avd_vector_anim"/>

    <TextView
        android:id="@+id/app_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_medial_24"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_medium_plus_40"/>

    <LinearLayout
        android:id="@+id/auth_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/social_wrap"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/panel_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/auth_frame_height"
            tools:background="@android:color/holo_blue_light">

            <android.support.v7.widget.CardView
                android:id="@+id/auth_card"
                style="@style/CustomCard.LoginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/spacing_tiny_6"
                android:layout_marginTop="@dimen/spacing_tiny_6"
                app:cardElevation="@dimen/spacing_zero"
                tools:layout_height="@dimen/size_normal_44"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_email_wrap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/font_small_14"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_password_wrap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/font_small_14"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/show_catalog_btn"
                style="@style/CustomButton"
                android:layout_gravity="bottom"
                android:text="@string/view_catalog"
                android:theme="@style/ShowBtn"/>

        </FrameLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/CustomButton"
            android:text="@string/login"
            android:theme="@style/StartBtn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/spacing_normal_16"
        android:paddingTop="@dimen/spacing_normal_16">

        <ImageButton
            android:id="@+id/fb_social_btn"
            android:layout_width="@dimen/size_medium_56"
            android:layout_height="@dimen/size_medium_56"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:background="@drawable/vk_selector_btn"
            android:contentDescription="@string/facebook_button"/>

        <ImageButton
            android:id="@+id/twitter_social_btn"
            android:layout_width="@dimen/size_medium_56"
            android:layout_height="@dimen/size_medium_56"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:background="@drawable/twitter_selector_btn"
            android:contentDescription="@string/twitter_button"/>

        <ImageButton
            android:id="@+id/vk_social_btn"
            android:layout_width="@dimen/size_medium_56"
            android:layout_height="@dimen/size_medium_56"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:background="@drawable/fb_selector_btn"
            android:contentDescription="@string/vk_button"/>

    </LinearLayout>

</com.crackncrunch.amplain.ui.screens.auth.AuthView>