<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context="com.crackncrunch.amplain.ui.activities.RootActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="@dimen/login_logo_width_70"
            android:layout_height="@dimen/login_logo_height_100"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_bigger_plus_48"
            android:src="@drawable/firebase_icon"/>

        <TextView
            android:id="@+id/app_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/spacing_medial_24"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_normal_40"/>

        <com.crackncrunch.amplain.ui.custom_views.AuthPanel
            android:id="@+id/auth_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/social_wrap"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/auth_card"
                style="@style/LoginCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_email_wrap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/font_small_14"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_password_wrap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_password"
                            android:inputType="textPassword"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/darker_gray"
                            android:textSize="@dimen/font_small_14"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/show_catalog_btn"
                style="@style/CustomButton"
                android:text="@string/view_catalog"
                android:theme="@style/ShowBtn"/>

            <Button
                android:id="@+id/login_btn"
                style="@style/CustomButton"
                android:text="@string/login"
                android:theme="@style/StartBtn"/>
        </com.crackncrunch.amplain.ui.custom_views.AuthPanel>

        <LinearLayout
            android:id="@+id/social_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/spacing_normal_16"
            android:paddingTop="@dimen/spacing_normal_16">

            <ImageButton
                android:layout_width="@dimen/size_medium_56"
                android:layout_height="@dimen/size_medium_56"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:background="@drawable/vk_selector_btn"/>

            <ImageButton
                android:layout_width="@dimen/size_medium_56"
                android:layout_height="@dimen/size_medium_56"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:background="@drawable/twitter_selector_btn"/>

            <ImageButton
                android:layout_width="@dimen/size_medium_56"
                android:layout_height="@dimen/size_medium_56"
                android:layout_marginLeft="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:background="@drawable/fb_selector_btn"/>

        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>